syntax = "proto3";
package soarchain.poa;

option go_package = "soarchain/x/poa/types";
import "poa/runner.proto"; 
import "poa/challenger.proto"; 

message Guard {
  string index = 1; 
  string guardId = 2; 
  Runner runner = 3; 
  Challenger v2XChallenger = 4; 
  Challenger v2NChallenger = 5; 
  
}

